# cad-cs

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHEATSHEET.md  Cargo.toml  Makefile.toml  ROADMAP.md  TODO.md
.github/workflows/: release.yml  rust.yml
.history/: plot-address_2026Q1D090W14_Tue31Mar_152449631_M.md  plot-address_2026Q1D090W14_Tue31Mar_190028179_X.md  plot-address_2026Q2D091W14_Wed01Apr_024102612_X.md  plot-address_2026Q2D091W14_Wed01Apr_055106965_X.md  plot-address_2026Q2D091W14_Wed01Apr_153340364_X.md  plot-address_2026Q2D091W14_Wed01Apr_153821810_X.md  plot-address_2026Q2D091W14_Wed01Apr_154951509_X.md  plot-address_2026Q2D091W14_Wed01Apr_160501271_X.md  plot-address_2026Q2D091W14_Wed01Apr_212107243_X.md  plot-address_2026Q2D091W14_Wed01Apr_212835020_X.md  plot-archive_2026Q1D090W14_Tue31Mar_152151558_X.md  plot-archive_2026Q1D090W14_Tue31Mar_152157772_M.md  plot-archive_2026Q1D090W14_Tue31Mar_174708072_X.md  plot-archive_2026Q1D090W14_Tue31Mar_190028769_X.md  plot-archive_2026Q1D090W14_Tue31Mar_210424887_X.md  plot-archive_2026Q1D090W14_Tue31Mar_221639051_X.md  plot-archive_2026Q2D091W14_Wed01Apr_025634102_X.md  plot-archive_2026Q2D091W14_Wed01Apr_055107668_X.md  plot-archive_2026Q2D091W14_Wed01Apr_061757763_X.md  plot-archive_2026Q2D091W14_Wed01Apr_153340817_X.md  plot-archive_2026Q2D091W14_Wed01Apr_153822249_X.md  plot-archive_2026Q2D091W14_Wed01Apr_154951939_X.md  plot-archive_2026Q2D091W14_Wed01Apr_212107696_X.md  plot-archive_2026Q2D091W14_Wed01Apr_212835537_X.md
.prompt/.src/: plot-address_2026Q2D092W14_Thu02Apr_193519520_X.md  (+5 more)
.temp/: usuwanie redundancji w model_cords.md
examples/: basic_usage.rs  playground.rs
src/: lib.rs  libs.rs
src/libs/: angle.rs  cs.rs  (+3 more)
(+20 files in other folders)
